--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" aria-current="page" href="./contact.html">Contacto</a>
+              <a class="nav-link text-white my-link" aria-current="page" href="./contact.html">Contacto</a>
             </li>
           </ul>
         </div>
