--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="música, instrumentos, piano, batería, bajo, guitarra">
+  <meta name="description" content="Compre lo último en instrumentos y equipo de música: guitarras, baterías, pianos y equipo de sonido y grabación en Gear4music, tienda de instrumentos musicales.">
   <title>Todo Música Online</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -18,9 +20,10 @@
   <header class="sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="./img/logo-guitarra-todo-musica-online.png" alt="Logo guitarra todo musica online" height="40"
-          class="d-inline-block align-text-top"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#"><img src="./img/logo-guitarra-todo-musica-online.png"
+            alt="Logo guitarra todo musica online" height="40" class="d-inline-block align-text-top"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,7 +70,7 @@
     </div>
   </section>
   <section class="m-5">
-    <h2 class="h2 mb-5">Los más vendidos en Instrumentos musicales</h2>
+    <h2 class="h2 mb-5 titleSection">Los más vendidos en Instrumentos musicales</h2>
     <div class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
@@ -128,7 +131,7 @@
   </section>
   <footer>
     <div class="p-5 bg-dark">
-      <p class="m-0 text-center text-white">Matías Quintas. Todos los derechos reservados © 2021</p>
+      <p class="m-0 text-center text-white parragraf">Matías Quintas. Todos los derechos reservados © 2021</p>
     </div>
   </footer>
 </body>
