Pre-Entrega Final

--- a/index.html
+++ b/index.html
@@ -29,14 +29,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white my-link" aria-current="page" href="./contact.html">Contacto</a>
+              <a class="nav-link text-white my-link" href="#vendidos">Más Vendidos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white my-link" href="#ofertas">Ofertas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white my-link" href="#valorados">Mejor Valorados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white my-link" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <section>
+  <section id="banner">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -69,8 +78,8 @@
       </button>
     </div>
   </section>
-  <section class="m-5">
-    <h2 class="h2 mb-5 titleSection">Los más vendidos en Instrumentos musicales</h2>
+  <section id="vendidos" class="m-5">
+    <h2 class="h2 mb-5 titleSection">Los más vendidos en Instrumentos Musicales</h2>
     <div class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
@@ -128,6 +137,207 @@
         </div>
       </div>
     </div>
+  </section>
+  <section id="ofertas" class="m-5">
+    <h2 class="h2 mb-5 titleSection">Mejores ofertas en Instrumentos Musicales</h2>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81TFpAZxP0L._AC_SS450_.jpg" class="card-img-top p-3"
+            alt="Piano RockJam 61 teclas">
+          <div class="card-body">
+            <h5 class="card-title">63,40€</h5>
+            <p class="card-text">Piano RockJam con teclado de 61 teclas con inflexión de tono, fuente de alimentación,
+              soporte para partituras, pegatinas para notas de piano y lecciones de piano.</p>
+          </div>
+          <a href="https://amzn.to/3dA8pX4" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/71Sggq51VqL._AC_SY450_.jpg" class="card-img-top p-3"
+            alt="Guitarra acústica Martin Smith">
+          <div class="card-body">
+            <h5 class="card-title">65,99€</h5>
+            <p class="card-text">Martin Smith W-101-N-PK - Guitarra acústica con el soporte de guitarra, sintonizador,
+              bolsa de púas, correa y cuerdas de la guitarra naturales.</p>
+          </div>
+          <a href="https://amzn.to/3oya5a0" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81vgIPKxEKL._AC_SL1500_.jpg" class="card-img-top p-3"
+            alt="Batería Electrónica Alesis Turbo Mesh">
+          <div class="card-body">
+            <h5 class="card-title">266,00€</h5>
+            <p class="card-text">Alesis Turbo Mesh Kit – Batería Electrónica Musical de 7 Piezas de Malla, 100+ Sonidos,
+              30 Pistas de Acompañamiento, Bastidor de Acero de Gran Robustez, Cables, Baquetas y Llave de Batería.</p>
+          </div>
+          <a href="https://amzn.to/3EBzYv2" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/61FaEmNp1HL._AC_SL1000_.jpg" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">118,99€</h5>
+            <p class="card-text">RockJam Super Kit de bajo de tamaño completo con amplificador de guitarra, Sintonizador
+              de guitarra, Soporte, Bolsa y accesorios Sunburst.</p>
+          </div>
+          <a href="https://amzn.to/3y42inu" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="valorados" class="m-5">
+    <h2 class="h2 mb-5 titleSection">Lo más valorados en Instrumentos musicales</h2>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81TFpAZxP0L._AC_SS450_.jpg" class="card-img-top p-3"
+            alt="Piano RockJam 61 teclas">
+          <div class="card-body">
+            <h5 class="card-title">63,40€</h5>
+            <p class="card-text">Piano RockJam con teclado de 61 teclas con inflexión de tono, fuente de alimentación,
+              soporte para partituras, pegatinas para notas de piano y lecciones de piano.</p>
+          </div>
+          <a href="https://amzn.to/3dA8pX4" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/71Sggq51VqL._AC_SY450_.jpg" class="card-img-top p-3"
+            alt="Guitarra acústica Martin Smith">
+          <div class="card-body">
+            <h5 class="card-title">65,99€</h5>
+            <p class="card-text">Martin Smith W-101-N-PK - Guitarra acústica con el soporte de guitarra, sintonizador,
+              bolsa de púas, correa y cuerdas de la guitarra naturales.</p>
+          </div>
+          <a href="https://amzn.to/3oya5a0" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81vgIPKxEKL._AC_SL1500_.jpg" class="card-img-top p-3"
+            alt="Batería Electrónica Alesis Turbo Mesh">
+          <div class="card-body">
+            <h5 class="card-title">266,00€</h5>
+            <p class="card-text">Alesis Turbo Mesh Kit – Batería Electrónica Musical de 7 Piezas de Malla, 100+ Sonidos,
+              30 Pistas de Acompañamiento, Bastidor de Acero de Gran Robustez, Cables, Baquetas y Llave de Batería.</p>
+          </div>
+          <a href="https://amzn.to/3EBzYv2" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/61FaEmNp1HL._AC_SL1000_.jpg" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">118,99€</h5>
+            <p class="card-text">RockJam Super Kit de bajo de tamaño completo con amplificador de guitarra, Sintonizador
+              de guitarra, Soporte, Bolsa y accesorios Sunburst.</p>
+          </div>
+          <a href="https://amzn.to/3y42inu" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="regalos" class="m-5">
+    <h2 class="h2 mb-5 titleSection">Ideales para regalos en Instrumentos musicales</h2>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81TFpAZxP0L._AC_SS450_.jpg" class="card-img-top p-3"
+            alt="Piano RockJam 61 teclas">
+          <div class="card-body">
+            <h5 class="card-title">63,40€</h5>
+            <p class="card-text">Piano RockJam con teclado de 61 teclas con inflexión de tono, fuente de alimentación,
+              soporte para partituras, pegatinas para notas de piano y lecciones de piano.</p>
+          </div>
+          <a href="https://amzn.to/3dA8pX4" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/71Sggq51VqL._AC_SY450_.jpg" class="card-img-top p-3"
+            alt="Guitarra acústica Martin Smith">
+          <div class="card-body">
+            <h5 class="card-title">65,99€</h5>
+            <p class="card-text">Martin Smith W-101-N-PK - Guitarra acústica con el soporte de guitarra, sintonizador,
+              bolsa de púas, correa y cuerdas de la guitarra naturales.</p>
+          </div>
+          <a href="https://amzn.to/3oya5a0" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81vgIPKxEKL._AC_SL1500_.jpg" class="card-img-top p-3"
+            alt="Batería Electrónica Alesis Turbo Mesh">
+          <div class="card-body">
+            <h5 class="card-title">266,00€</h5>
+            <p class="card-text">Alesis Turbo Mesh Kit – Batería Electrónica Musical de 7 Piezas de Malla, 100+ Sonidos,
+              30 Pistas de Acompañamiento, Bastidor de Acero de Gran Robustez, Cables, Baquetas y Llave de Batería.</p>
+          </div>
+          <a href="https://amzn.to/3EBzYv2" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/61FaEmNp1HL._AC_SL1000_.jpg" class="card-img-top p-3" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">118,99€</h5>
+            <p class="card-text">RockJam Super Kit de bajo de tamaño completo con amplificador de guitarra, Sintonizador
+              de guitarra, Soporte, Bolsa y accesorios Sunburst.</p>
+          </div>
+          <a href="https://amzn.to/3y42inu" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="contacto" class="d-flex justify-content-center m-5">
+    <form class="p-5 border border-secondary rounded-1">
+      <div><h2 class="h2 mb-5 titleSection">Contáctanos</h2></div>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Correo Electrónico</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">Nunca compartiremos esta información con nadie.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Acepto los terminos y condiciones</label>
+      </div>
+      <div class="text-center d-grid gap-2">
+        <button type="submit" class="btn btn-warning">Enviar</button>
+      </div>
+    </form>
   </section>
   <footer>
     <div class="p-5 bg-dark">
