--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="música, instrumentos, piano, batería, bajo, guitarra">
-  <meta name="description" content="Compre lo último en instrumentos y equipo de música: guitarras, baterías, pianos y equipo de sonido y grabación en Gear4music, tienda de instrumentos musicales.">
+  <meta name="description"
+    content="Compre lo último en instrumentos y equipo de música: guitarras, baterías, pianos y equipo de sonido y grabación en Gear4music, tienda de instrumentos musicales.">
   <title>Todo Música Online</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -36,6 +37,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link text-white my-link" href="#valorados">Mejor Valorados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white my-link" href="#regalos">Para Regalo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white my-link" href="#contacto">Contacto</a>
@@ -143,48 +147,6 @@
     <div class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="https://m.media-amazon.com/images/I/81TFpAZxP0L._AC_SS450_.jpg" class="card-img-top p-3"
-            alt="Piano RockJam 61 teclas">
-          <div class="card-body">
-            <h5 class="card-title">63,40€</h5>
-            <p class="card-text">Piano RockJam con teclado de 61 teclas con inflexión de tono, fuente de alimentación,
-              soporte para partituras, pegatinas para notas de piano y lecciones de piano.</p>
-          </div>
-          <a href="https://amzn.to/3dA8pX4" class="btn btn-warning rounded-0" target="_blank">
-            <small class="text-uppercase">Comprar en Amazon</small>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 shadow-sm">
-          <img src="https://m.media-amazon.com/images/I/71Sggq51VqL._AC_SY450_.jpg" class="card-img-top p-3"
-            alt="Guitarra acústica Martin Smith">
-          <div class="card-body">
-            <h5 class="card-title">65,99€</h5>
-            <p class="card-text">Martin Smith W-101-N-PK - Guitarra acústica con el soporte de guitarra, sintonizador,
-              bolsa de púas, correa y cuerdas de la guitarra naturales.</p>
-          </div>
-          <a href="https://amzn.to/3oya5a0" class="btn btn-warning rounded-0" target="_blank">
-            <small class="text-uppercase">Comprar en Amazon</small>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 shadow-sm">
-          <img src="https://m.media-amazon.com/images/I/81vgIPKxEKL._AC_SL1500_.jpg" class="card-img-top p-3"
-            alt="Batería Electrónica Alesis Turbo Mesh">
-          <div class="card-body">
-            <h5 class="card-title">266,00€</h5>
-            <p class="card-text">Alesis Turbo Mesh Kit – Batería Electrónica Musical de 7 Piezas de Malla, 100+ Sonidos,
-              30 Pistas de Acompañamiento, Bastidor de Acero de Gran Robustez, Cables, Baquetas y Llave de Batería.</p>
-          </div>
-          <a href="https://amzn.to/3EBzYv2" class="btn btn-warning rounded-0" target="_blank">
-            <small class="text-uppercase">Comprar en Amazon</small>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100 shadow-sm">
           <img src="https://m.media-amazon.com/images/I/61FaEmNp1HL._AC_SL1000_.jpg" class="card-img-top p-3" alt="...">
           <div class="card-body">
             <h5 class="card-title">118,99€</h5>
@@ -196,11 +158,6 @@
           </a>
         </div>
       </div>
-    </div>
-  </section>
-  <section id="valorados" class="m-5">
-    <h2 class="h2 mb-5 titleSection">Lo más valorados en Instrumentos musicales</h2>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card h-100 shadow-sm">
           <img src="https://m.media-amazon.com/images/I/81TFpAZxP0L._AC_SS450_.jpg" class="card-img-top p-3"
@@ -239,6 +196,53 @@
               30 Pistas de Acompañamiento, Bastidor de Acero de Gran Robustez, Cables, Baquetas y Llave de Batería.</p>
           </div>
           <a href="https://amzn.to/3EBzYv2" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="valorados" class="m-5">
+    <h2 class="h2 mb-5 titleSection">Lo más valorados en Instrumentos musicales</h2>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/71Sggq51VqL._AC_SY450_.jpg" class="card-img-top p-3"
+            alt="Guitarra acústica Martin Smith">
+          <div class="card-body">
+            <h5 class="card-title">65,99€</h5>
+            <p class="card-text">Martin Smith W-101-N-PK - Guitarra acústica con el soporte de guitarra, sintonizador,
+              bolsa de púas, correa y cuerdas de la guitarra naturales.</p>
+          </div>
+          <a href="https://amzn.to/3oya5a0" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81vgIPKxEKL._AC_SL1500_.jpg" class="card-img-top p-3"
+            alt="Batería Electrónica Alesis Turbo Mesh">
+          <div class="card-body">
+            <h5 class="card-title">266,00€</h5>
+            <p class="card-text">Alesis Turbo Mesh Kit – Batería Electrónica Musical de 7 Piezas de Malla, 100+ Sonidos,
+              30 Pistas de Acompañamiento, Bastidor de Acero de Gran Robustez, Cables, Baquetas y Llave de Batería.</p>
+          </div>
+          <a href="https://amzn.to/3EBzYv2" class="btn btn-warning rounded-0" target="_blank">
+            <small class="text-uppercase">Comprar en Amazon</small>
+          </a>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="https://m.media-amazon.com/images/I/81TFpAZxP0L._AC_SS450_.jpg" class="card-img-top p-3"
+            alt="Piano RockJam 61 teclas">
+          <div class="card-body">
+            <h5 class="card-title">63,40€</h5>
+            <p class="card-text">Piano RockJam con teclado de 61 teclas con inflexión de tono, fuente de alimentación,
+              soporte para partituras, pegatinas para notas de piano y lecciones de piano.</p>
+          </div>
+          <a href="https://amzn.to/3dA8pX4" class="btn btn-warning rounded-0" target="_blank">
             <small class="text-uppercase">Comprar en Amazon</small>
           </a>
         </div>
@@ -320,7 +324,9 @@
   </section>
   <section id="contacto" class="d-flex justify-content-center m-5">
     <form class="p-5 border border-secondary rounded-1">
-      <div><h2 class="h2 mb-5 titleSection">Contáctanos</h2></div>
+      <div>
+        <h2 class="h2 mb-5 titleSection">Contáctanos</h2>
+      </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Correo Electrónico</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
