--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link text-white my-link" href="#regalos">Para Regalo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white my-link" href="#contacto">Contacto</a>
+              <a class="nav-link text-white my-link" href="./contact.html">Contacto</a>
             </li>
           </ul>
         </div>
